Made some changes for testing how git works

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 	<h1> chibai uvce boys and girls </h1>
+    <h2> tah hian Ringzuala mu thlu lai a awm tur a ni e </h2>
 </body>
 </html>
